# Commitly

./: .dockerignore  .gitignore  Architecture.md  CLAUDE.md  CONTRIBUTING.md  CloneAgent.md  CodeAgent.md  DOCKER_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_PLAN.md  PRD.md  README.md  RefactoringAgent.md  SyncAgent.md  TestAgent.md  config.yaml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  syncbackup.py
.commitly/slack/: matches.json
docs/: testing.md
docs/agents/: CodeAgent.md  RefactoringAgent.md  ReportAgent.md  SlackAgent.md  SyncAgent.md  TestAgent.md
scripts/: build-docker.sh
src/commitly/agents/: base.py
src/commitly/agents/clone/: agent.py  utils.py
src/commitly/agents/code/: agent.py  sql_parser.py  static_checker.py
src/commitly/agents/refactoring/: __init__.py  agent.py
src/commitly/agents/report/: __init__.py  agent.py
src/commitly/agents/review/: __init__.py  agent.py
src/commitly/agents/slack/: __init__.py  agent.py
src/commitly/agents/sync/: __init__.py  agent.py
src/commitly/agents/test/: __init__.py  agent.py  sql_optimizer.py
src/commitly/cli/: main.py
src/commitly/cli/commands/: __init__.py  commit.py  init.py  report.py  status.py
src/commitly/core/: config.py  context.py  git_manager.py  llm_client.py  logger.py  rollback.py
src/commitly/pipeline/: __init__.py  graph.py
